<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">餐萌饭店端</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">餐萌</string>
    <string name="copyright_statement">Copyright ©2011&#8211;2012 Cm.com 版权所有</string>
    
    
    <!-- 欢迎界面相关字符串 -->
    <string name="dialogUpdateSoftTitleTxt">软件更新</string>
    <string name="dialogUpdateSoftMsgTxt">本软件有新版本，需要更新吗?</string>
    <string name="dialogUpdateSoftPositiveTxt">更新</string>
    <string name="dialogUpdateSoftNegativeTxt">暂不更新</string>
    <string name="pdUpdateSoftMsgTxt">正在下载更新，请稍后</string>

    <!-- 登录界面 -->
    <string name="loginAy_titleTvTxt">工作人员登录</string>
    <string name="loginAy_restaurantIdLable">饭店IP：</string>
    <string name="loginAy_userNameLable">用户名：</string>
    <string name="loginAy_passwdLable">密码：</string>
    <string name="loginAy_autoLoginCbTxt">自动登录</string>
    <string name="loginAy_loginBtTxt">登录</string>
    <string name="loginAy_registerBtTxt">设置网络</string>
    <string name="loginAy_restaurantIdHintTxt">请输入饭店IP</string>
    <string name="loginAy_userNameHintTxt">请输入用户名</string>
    <string name="loagiAy_passwdHintTxt">请输入密码</string>
    
    <!-- 对话框按钮相关字符串 -->
    <string name="DgExitTitleTxt">您确定要退出吗？</string>
    <string name="DgExitInfoTxt">您如果确定要退出请点击确定，否则点击取消</string>
    <string name="DgPositiveBtTxt">确定</string>
    <string name="DgNegativeBtTxt">取消</string>
    <string name="DgQuxiaoDDTitleTxt">您确定要取消订单吗？</string>
    <string name="DgQuxiaoDDInfoTxt">您如果确定要取消订单请点击确定，否则点击取消</string>
    <string name="DgAddrDelTitleTxt">您确定要删除吗？</string>
    <string name="DgAddrDelInfoTxt">您如果确定要删除请点击确定，否则点击取消</string>
    <string name="DgGoodsCollectTitleTxt">您确定要收藏该商品吗？</string>
    <string name="DgGoodsCollectInfoTxt">您如果确定要收藏请点击确定，否则点击取消</string>
    <string name="DgShopCollectTitleTxt">您确定要收藏该商铺吗？</string>
    <string name="DgShopCollectInfoTxt">您如果确定要收藏该商铺请点击确定，否则点击取消</string>  
    <string name="DgShopCollectDelTitleTxt">您确定要删除该收藏吗？</string>
    <string name="DgShopCollectDelInfoTxt">您如果确定要删除该收藏请点击确定，否则点击取消</string>
    <string name="DgGoodsCollectDelTitleTxt">您确定要删除该收藏吗？</string>
    <string name="DgGoodsCollectDelInfoTxt">您如果确定要删除该收藏请点击确定，否则点击取消</string>
    <string name="DgPayTitleTxt">您确定要支付吗？</string>
    <string name="DgPayInfoTxt">您如果确定要支付请点击确定，否则点击取消</string>
    <string name="DgMakeOrderTitleTxt">您确定要生成订单吗？</string>
    <string name="DgMakeOrderInfoTxt">您如果确定要生成订单请点击确定，否则点击取消</string>
    <string name="DgAppraiseTitleTxt">您确定要提交评价吗？</string>
    <string name="DgAppraiseInfoTxt">您如果确定要提交评价请点击确定，否则点击取消</string>
    
    <!-- 系统菜单相关 -->
    <string name="menu_loginTxt">登录/切换用户</string>
    <string name="menu_refreshTxt">重新加载</string>
    <string name="menu_exitTxt">退出</string>
    
    <!-- 访问网络状态提示信息 -->
    <string name="urlErr_networkErrTxt">网络异常，请检查你的网络环境</string>
    <string name="urlErr_otherErrTxt">很抱歉，发生了未知错误</string>
    <string name="urlErr_stopByUser">您取消了当前操作</string>
    <string name="urlErr_serverErrTxt">很抱歉，发生了服务器错误</string>
    <string name="urlErr_fileNotFoundTxt">很抱歉，您申请的资源不存在</string>
    
     <!-- 主菜单相关 -->
    <string name="mainNavbar_mainPageBtTxt">首页</string>
    <string name="mainNavbar_dishListBtTxt">点菜列表</string>
    <string name="mainNavbar_reserveBtTxt">消息</string>
    
    <!-- 点菜列表界面 -->
    <string name="dlAy_titleTvTxt">点菜列表</string>
    <string name="dlAy_noDishNotify">还没有需处理的点菜哦</string>
    
    <!-- 消息列表界面 -->
    <string name="mlAy_titleTvTxt">消息</string>
    <string name="mlAy_noMsgNotify">没有消息</string>
    
    <!-- 公用字符串 -->
    <string name="loadingMore">正在努力为您加载，请稍后&#8230;&#8230;</string>
    <string name="money_yuan">元</string>
    <string name="gobackBtTxt">返回</string>
    
    <!-- 设置界面 -->
    <string name="settingAy_titleTvTxt">设置</string>
    <string name="settingAy_restaurantIdLable">服务器IP：</string>
    <string name="settingAy_userNameLable">基本URL：</string>

    <string name="settingAy_loginBtTxt">设置</string>
    <string name="settingAy_registerBtTxt">注册</string>
    <string name="settingAy_restaurantIdHintTxt">请输入饭店IP</string>
    <string name="settingAy_userNameHintTxt">请输入基本URL</string>
    <string name="settingAy_passwdHintTxt">请输入密码</string>
    
</resources>
